Archive2/98/ec4f5f9ad08a13/output
main.cpp:2:15: error: constexpr variable 'b' must be initialized by a constant expression
constexpr int b = a;
              ^   ~
main.cpp:2:19: note: read of non-const variable 'a' is not allowed in a constant expression
constexpr int b = a;
                  ^
main.cpp:1:5: note: declared here
int a = 1;
    ^
1 error generated.
